<resources>

    <string name="app_name">My Beer</string>
    <string name="cancel">Cancelar</string>

    <string name="error_no_authorized">Acceso denegado</string>

    <string name="splash_error_permission_denied">Para usar la aplicación debe tener la localización activada</string>
    <string name="splash_error_permission_retry">Reintentar</string>

    <string name="register_user_error_empty_fields">Error, campos vaciós</string>
    <string name="register_user_error_user_already_exist">Error, el usuario ya existe</string>
    <string name="register_user_error_user_not_exist">Error, el usuario no existe</string>
    <string name="register_user_error_server_error">Error en el servidor</string>
    <string name="register_user_error_invalid_email">Error formato EMAIL no válido</string>

    <string name="login_error_email_password_incorrect">Usuario o clave incorrecto</string>

    <string name="main_activity_bar_found">Bares encontrados: %1$s</string>
    <string name="main_activity_empty_list">Lista de bares vacío</string>
    <string name="main_activity_set_radius">Setear Radio (%1$s Km)</string>
    <string name="main_activity_dialog_title">Setear Radio en KM</string>

    <string name="add_bar_error">Error al crear el Bar</string>
    <string name="add_bar_get_position_empty_fields">Faltan datos (Dirección/Ciudad/País)</string>
    <string name="add_bar_name">Nombre</string>
    <string name="add_bar_address">Dirección</string>
    <string name="add_bar_city">Ciudad</string>
    <string name="add_bar_country">País</string>
    <string name="add_bar_lat">Latitud</string>
    <string name="add_bar_lon">Longitud</string>
    <string name="add_bar_find_in_map">Buscarlo en el mapa</string>
    <string name="add_bar_create">Crear Bar</string>
    <string name="add_bar_error_get_position">Error al obtener posición</string>
    <string name="add_bar_done">Aceptar</string>

    <string name="rating_bar_successful">Gracias por el voto</string>
    <string name="rating_cancel">Operación cancelada</string>

    <string name="admob_application_id">ca-app-pub-8178489486911148~4237771830</string>
    <string name="admob_banner_id">ca-app-pub-8178489486911148/7410730086</string>
    <string name="admob_native_id">ca-app-pub-8178489486911148/2976661058</string>
    <string name="admob_banner_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_native_id_test">ca-app-pub-3940256099942544/2247696110</string>

</resources>
