<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AddBarActivity">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.kfouri.mybeer.viewmodels.AddBarViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/photo"
                    android:layout_marginTop="32dp"
                    android:layout_gravity="center"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_bar_name"
                        android:text="@={viewmodel.nameField}"
                        android:inputType="textCapWords">
                        <requestFocus/>
                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/button_getPosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/add_bar_find_in_map"
                    android:onClick="@{() -> viewmodel.onFindBarInMap()}"
                    android:background="@drawable/button_rounded"
                    android:textColor="#FFFFFF" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="16dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewmodel.addressField}"
                        android:hint="@string/add_bar_address"
                        android:enabled="false"
                        android:inputType="textCapWords"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="16dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_bar_city"
                        android:text="@={viewmodel.cityField}"
                        android:inputType="textCapWords"
                        android:enabled="false"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:textColorHint="@color/colorPrimary"
                    android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="16dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editText_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_bar_country"
                        android:text="@={viewmodel.countryField}"
                        android:inputType="textCapWords"
                        android:enabled="false"
                        android:maxLines="1"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:focusable="true"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginTop="16dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_lat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_bar_lat"
                            android:text="@={viewmodel.latField}"
                            android:enabled="false"
                            android:maxLines="1"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:focusable="true"
                        android:textColorHint="@color/colorPrimary"
                        android:layout_marginEnd="32dp"
                        android:layout_marginTop="16dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_lon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/add_bar_lon"
                            android:text="@={viewmodel.lonField}"
                            android:enabled="false"
                            android:maxLines="1"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/button_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/add_bar_create"
                    android:onClick="@{() -> viewmodel.onClickCreate()}"
                    android:background="@drawable/button_rounded"
                    android:textColor="#FFFFFF" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_progress"
                android:visibility="@{viewmodel.progress}">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="@{viewmodel.progress}" />
            </RelativeLayout>

        </FrameLayout>

    </ScrollView>

</layout>